--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
+    "cookie-parser": "^1.4.3",
     "express": "^4.13.4",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.14.0",
     "express-validator": "^2.20.8",
     "handlebars": "^4.0.5",
-    "mongoose": "^4.5.2"
+    "mongoose": "^4.5.2",
+    "nconf": "^0.8.4",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
   }
 }
